Alteraçao da estrutura de configuração.

--- a/NetCore6Routine.App/appsettings.json
+++ b/NetCore6Routine.App/appsettings.json
@@ -3,6 +3,10 @@
     "Enviroment": "DEV",
     "DevParameters": {
       "ConnectionString": "ConexaoDesenvolvimento",
+      "Connections": {
+        "ServidorPrimario": "ConexaoServidorPrimario",
+        "ServidorSecundario": "ConexaoServidorSecundario"
+      },
       "Configurations": {
         "Configuration1": "Valor de Configuracao 1",
         "Configuration2": "Valor de Configuracao 2",
@@ -14,6 +18,10 @@
     },
     "HmlParameters": {
       "ConnectionString": "ConexaoHomologacao",
+      "Connections": {
+        "ServidorPrimario": "ConexaoServidorPrimario",
+        "ServidorSecundario": "ConexaoServidorSecundario"
+      },
       "Configurations": {
         "Configuration1": "Valor de Configuracao 1",
         "Configuration2": "Valor de Configuracao 2",
@@ -25,6 +33,10 @@
     },
     "ProdParameters": {
       "ConnectionString": "ConexaoProducao",
+      "Connections": {
+        "ServidorPrimario": "ConexaoServidorPrimario",
+        "ServidorSecundario": "ConexaoServidorSecundario"
+      },
       "Configurations": {
         "Configuration1": "Valor de Configuracao 1",
         "Configuration2": "Valor de Configuracao 2",
